# git-automessage

./: Cargo.toml  LICENSE  README.md  README_CN.md  config.example.yaml
prompts/: COMMIT  GITMOJI
prompts/en/: COMMIT
prompts/zh-CN/: COMMIT  GITMOJI
src/: changelog.rs  cli.rs  config.rs  git.rs  lib.rs  llm.rs  main.rs  prompts.rs
tests/: test_config.rs  test_llm.rs
