[package]
name = "git-automessage"
version = "0.1.0"
description = "A git message generator written in Rust."
authors = ["Sidney Zhang <zly@lyzhang.me>"]
license = "MIT"
edition = "2024"

[dependencies]
git2 = "0.20.2"
rig-core = "0.16.0"
tokio = { version = "1.47.1", features = ["full"] }
clap = { version = "4.5.20", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
dirs = "5.0"
anyhow = "1.0"
chrono = "0.4"

[dev-dependencies]
tempfile = "3.8"
